vercre-holder/tests/snapshots/preauth_narrow__credentials.snap
---
source: vercre-holder/tests/preauth_narrow.rs
assertion_line: 123
expression: credentials
---
- id: "http://vercre.io/credentials/DeveloperCredential"
  issuer: "http://vercre.io"
  vc:
    "@context":
      - "https://www.w3.org/2018/credentials/v1"
      - "http://vercre.io/credentials/v1"
    credentialSubject:
      family_name: Person
      given_name: Normal
      id: "did:key:z6Mkj8Jr1rg3YjVWWhg7ahEYJibqhjBgZt1pDCbT4Lv7D4HX"
      proficiency: "3"
    description:
      "@value": Vercre certified developer credential
      "@language": en-NZ
    id: "http://vercre.io/credentials/DeveloperCredential"
    issuer: "http://vercre.io"
    name:
      "@value": Developer
      "@language": en-NZ
    type:
      - VerifiableCredential
      - DeveloperCredential
    validFrom: "[validFrom]"
  issued: "[issued]"
  display:
    - name: Developer
      locale: en-NZ
      logo:
        uri: "https://vercre.github.io/assets/developer.png"
        alt_text: Vercre Logo
      description: Vercre certified developer credential
      background_color: "#010100"
      background_image:
        uri: "https://vercre.github.io/assets/vercre-background.png"
        alt_text: Vercre Background
      text_color: "#ffffff"
  logo:
    image: ""
    mediaType: ""
